tests/baselines/reference/tsxAttributeResolution11.errors.txt
file.tsx(11,22): error TS2322: Type '{ bar: string; }' is not assignable to type 'IntrinsicAttributes & { ref?: string; }'.
  Property 'bar' does not exist on type 'IntrinsicAttributes & { ref?: string; }'.
react.d.ts(1,16): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== react.d.ts (1 errors) ====
    declare module JSX {
                   ~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
    	interface Element { }
    	interface IntrinsicElements {
    	}
    	interface ElementAttributesProperty {
    		props;
    	}
    	interface IntrinsicAttributes {
    		ref?: string;
    	}
    }
    
==== file.tsx (1 errors) ====
    class MyComponent {  
      render() {
      }
    
      props: {
    	  ref?: string;
      }
    }
    
    // Should be an OK
    var x = <MyComponent bar='world' />;
                         ~~~
!!! error TS2322: Type '{ bar: string; }' is not assignable to type 'IntrinsicAttributes & { ref?: string; }'.
!!! error TS2322:   Property 'bar' does not exist on type 'IntrinsicAttributes & { ref?: string; }'.
    
    